--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -1,10 +1,13 @@
 version: '3.8'
 services:
   frontend:
-    image: node:20
+    build: ./frontend
     ports:
       - "5173:5173"
-    volumes:
-      - ./frontend:/app
-    working_dir: /app
-    command: sh -c "npm install && npm run dev -- --host"
+
+  testmicroservice:
+    build: ./backend/TestMicroservice
+    ports:
+      - "5000:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
