Added login page -> Branch feature/loginpage

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -39,7 +39,8 @@
       "@utils/*": ["./src/utils/*"],
       "@types/*": ["./src/types/*"],
       "@assets/*": ["./src/assets/*"],
-      "@styles/*": ["./src/styles/*"]
+      "@styles/*": ["./src/styles/*"],
+      "@router/*": ["./src/router/*"]
     }
   },
   "include": ["src"]
