Somewhat did google auth (draft changes)

--- a/backend/TestMicroservice/appsettings.Development.json
+++ b/backend/TestMicroservice/appsettings.Development.json
@@ -4,5 +4,26 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "OAuth": {
+    "Google": {
+      "ClientId": "130945399305-9nqgn0nbnqghnvnk70u5n0ta4d3h4m1o.apps.googleusercontent.com",
+      "ClientSecret": "GOCSPX-your_google_client_secret_here"
+    },
+    "GitHub": {
+      "ClientId": "your_github_client_id_here",
+      "ClientSecret": "your_github_client_secret_here"
+    },
+    "Facebook": {
+      "AppId": "your_facebook_app_id_here",
+      "AppSecret": "your_facebook_app_secret_here"
+    }
+  },
+  "Jwt": {
+    "SecretKey": "your-super-secret-jwt-key-at-least-32-characters-long-for-security-purposes-and-more",
+    "Issuer": "PancakesBlog",
+    "Audience": "PancakesBlogUsers",
+    "ExpirationMinutes": 1440
+  },
+  "AllowedOrigins": ["http://localhost:5173"]
 }
