--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth/core": "^0.40.0",
+    "@types/node": "^24.0.13",
     "antd": "^5.26.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
