Github Login added. Need to fix Callback of github login.

--- a/backend/TestMicroservice/appsettings.Development.json
+++ b/backend/TestMicroservice/appsettings.Development.json
@@ -11,8 +11,8 @@
       "ClientSecret": "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"
     },
     "GitHub": {
-      "ClientId": "your_github_client_id_here",
-      "ClientSecret": "your_github_client_secret_here"
+      "ClientId": "Ov23liYGBBTfFcLOt6Ta",
+      "ClientSecret": "1dbd0bcb5bbb79d12c26e40517f87dd99610f526"
     },
     "Facebook": {
       "AppId": "your_facebook_app_id_here",
