--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "3000:5173"
     environment:
-      - VITE_BLOG_API_URL=http://blogservice:80
+      - VITE_BLOG_API_URL=http://localhost:5001
     depends_on:
       - blogservice
 
