--- a/backend/UserService/Dockerfile
+++ b/backend/UserService/Dockerfile
@@ -10,4 +10,6 @@ RUN dotnet publish -c Release -o /app
 FROM base AS final
 WORKDIR /app
 COPY --from=build /app .
+ENV DOTNET_RUNNING_IN_CONTAINER=true
+ENV ASPNETCORE_URLS=http://+:80
 ENTRYPOINT ["dotnet", "UserService.dll"]
