--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@auth/core": "^0.40.0",
     "@types/node": "^24.0.13",
+    "@types/react-router-dom": "^5.3.3",
     "antd": "^5.26.4",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.0",
     "sass": "^1.89.2"
   },
   "devDependencies": {
