--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -1,6 +1,6 @@
 version: "3.8"
 services:
-  postgres:
+  postgres-blogs:
     image: postgres:15
     env_file:
       - .env
@@ -11,7 +11,21 @@ services:
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_blogs_data:/var/lib/postgresql/data
+
+  postgres-users:
+    image: postgres:15
+    env_file:
+      - .env
+    environment:
+      - POSTGRES_DB=PancakesUserDB
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres123
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_users_data:/var/lib/postgresql/data
 
 volumes:
-  postgres_data:
+  postgres_blogs_data:
+  postgres_users_data:
