--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,21 +12,34 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Handle client-side routing
+        # IMPORTANT (Development):
+        # The following cache controls disable caching of HTML and the index route so you can
+        # deploy rapid changes without fighting browser caches. For production at scale, we can
+        # keep long caching only for static assets (immutable) and remove the no-store headers on HTML.
         location / {
+            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
+            # SPA routing fallback to index.html
             try_files $uri $uri/ /index.html;
         }
 
-        # Cache static assets
+        # Cache static assets aggressively
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
 
+        # IMPORTANT (Development): Ensure HTML is never cached
+        location ~* \.html$ {
+            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
+        }
+
         # Security headers
+        add_header Strict-Transport-Security "max-age=31536000" always;
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     }
 }
+
+
