--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,15 @@
-FROM node:20 AS base
+FROM node:18-alpine as build
+
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 COPY . .
-RUN chmod +x node_modules/.bin/* && \
-    find node_modules -name "*.bin" -type d -exec chmod +x {}/* \; 2>/dev/null || true && \
-    find node_modules -name "esbuild" -type f -exec chmod +x {} \; 2>/dev/null || true
-EXPOSE 5173
-CMD ["npm", "run", "dev"]
+
+RUN npx --yes vite build
+
+FROM nginx:alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
